# receipt-processor

./: .gitignore  Cargo.toml  LICENSE  README.md  test.check
src/: accounting.rs  lib.rs  main.rs  price_printer.rs  receipt.rs
