[package]
name = "receipt_processor"
version = "0.1.0"
authors = ["Raitis Krikis <raitis.krikis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }


[[bin]]
name="receipt-processor"
path="src/main.rs"

# This is here so that doc tests run. See https://github.com/rust-lang/rust/issues/50784#issuecomment-653895749
[lib]
name="receipt_processor"
path="src/lib.rs"